# onsetto-challenge

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
part1_browser/: automate.py
part2_api/: main.py
part2_api/onsetto_client/: __init__.py  client.py  errors.py  models.py  retry.py
part2_api/tests/: test_client.py
