[project]
name = "onsetto-challenge"
version = "0.1.0"
description = "Onsetto engineering challenge — typed Python API client + Playwright browser automation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.7",
    "tenacity>=8.3",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
browser = [
    "playwright>=1.44",
]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.uv]
# This is a runnable application, not a library to install — only manage deps.
package = false

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["part2_api/tests"]
pythonpath = ["part2_api"]
